unpackaged/main/default/objects/KeyAccountPricing__c/KeyAccountPricing__c.object-meta.xml
<CustomObject>
    <label>Key Account Pricing</label>
    <nameField>
        <label>Key Account Pricing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Key Account Pricing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>