unpackaged/main/default/objects/KeyAccountPricing__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Key Account Pricing</relationshipLabel>
    <relationshipName>Key_Account_Pricing</relationshipName>
    <type>Lookup</type>
</CustomField>