unpackaged/main/default/objects/KeyAccountPricing__c/fields/Key_Account__c.field-meta.xml
<CustomField>
    <fullName>Key_Account__c</fullName>
    <formula>(Account__r.Est_un_grand_compte__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Key Account</label>
    <type>Checkbox</type>
</CustomField>