unpackaged/main/default/objects/KeyAccountPricing__c/listViews/ALL_1.listView-meta.xml
<ListView>
    <fullName>ALL_1</fullName>
    <columns>NAME</columns>
    <columns>Key_Account__c</columns>
    <columns>Product_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>ALL</label>
</ListView>